<resources>
    <string name="app_name">androidProjeto</string>
    <string name="navigation_drawer_open" translatable="false">Abrir drawer de navegação</string>
    <string name="navigation_drawer_close">Fechar drawer de navegação</string>
    <string name="nav_header_title">Loja de Miniaturas</string>
    <string name="nav_header_subtitle">suporte@lojademiniaturas.com</string>
    <string name="nav_header_desc">Cabeçalho de Navegação</string>
    <string name="action_settings">Configurações</string>

    <string name="menu_home">Loja de Miniaturas</string>
    <string name="menu_gallery">Produtos</string>
    <string name="menu_slideshow">Comprar</string>

    <string name="home_second">Home Second</string>
    <string name="Bemvindo">Bem Vindo</string>
    <string name="Produto">Escolha o tipo de produto que procura:</string>
    <string name="boleto">Boleto</string>

    <string name="checkbox1">Marvel</string>
    <string name="checkbox2">Dc</string>
    <string name="checkbox3">Disney</string>
    <string name="checkbox4">Game of Thrones</string>
    <string name="checkbox5">Harry Potter</string>

    <string name="enviar">Enviar</string>
    <string name="Pesquisa">Qual o tipo de funko que você mais procura?</string>
    <string name="nome">Nome:</string>
    <string name="edt_txt">Escreva seu nome</string>

    <string name="essesProdutos">Esses são os produtos</string>
    <string name="ola">Olá</string>
    <string name="imagem_do_funko">Imagem do Funko</string>
    <string name="compra">Abaixo temos o preço:</string>
    <string name="comprar">Comprar</string>
    <string name="Erro">Volte para a pagina inicial</string>
    <string name="tela2escolha">Qual produto você deseja comprar?</string>

    <array name="fotos">
        <item>@drawable/marvel_tonystark</item>
        <item>@drawable/dc_flash</item>
        <item>@drawable/disney_woody</item>
        <item>@drawable/got_jonsnow</item>
        <item>@drawable/hp_harrypotter</item>
    </array>

    <string-array name="nomes">
        <item>Marvel,Tony Stark</item>
        <item>DC,The Flash</item>
        <item>Disney,Woody</item>
        <item>Game Of Thrones,Jon Snow</item>
        <item>Harry Potter,Harry Potter</item>
    </string-array>

    <string-array name="preco">
        <item>R$:100,00</item>
        <item>R$:80,00</item>
        <item>R$:75,00</item>
        <item>R$:80,00</item>
        <item>R$:100,00</item>
    </string-array>

    <string-array name="spinner_values">
        <item>PAC (7-10 dias)</item>
        <item>Sedex (3-4 dias)</item>
        <item>Retirada</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listar_produtos">LISTAR PRODUTOS</string>
    <string name="carregando_produto">Carregando Produto...</string>
    <string name="obrigado_pela_compra_aqui_est_o_seu_boleto">Obrigado pela compra. Aqui está o seu boleto:</string>
    <string name="minhas_compras">Minhas Compras</string>
    <string name="sair">Sair</string>
</resources>